# option-pricing-cuda

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  benchmark.json  sbatch.sh  shell.nix  temp.json
.github/workflows/: cmake-single-platform.yml
apps/: CMakeLists.txt  binomial_crr_american_vanilla_option.cpp  pricing_cli.cpp  print_helpers.cpp
apps/include/: pricing_cli.hpp
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark_parameters.cpp  dataset.cpp  functions_version.cpp  sanity_checks.cpp
benchmarks/include/: benchmark.hpp  benchmark_parameters.hpp  dataset.hpp  function_registry.hpp  functions_version.hpp  run_random_generator.hpp  sanity_checker.hpp  sanity_checks.hpp
debug/: create_functions.py  main.py
include/: benchmark.hpp  binomial_crr_american_vanilla_option_cpu.hpp  binomial_crr_european_vanilla_option_cpu.hpp  constants.hpp  dataset.hpp  functions_version.hpp  sanity_checks.hpp
include/backends/: hyperparams.hpp
include/cpu/: binomial_crr_american_vanilla_option_cpu.hpp  binomial_crr_european_vanilla_option_cpu.hpp  openmp.hpp  remove_zero.hpp
include/models/: vanilla_american_binomial.hpp  vanilla_european_binomial.cpp  vanilla_european_binomial.hpp
profile_res/: .gitignore  profile_report.nsys-rep
scripts/: .gitignore  ablation_study.py  ablation_study_results.csv  ablation_study_table.tex  analys_ncu_full.py  compile_on_cluster.sh  compile_release_cluster.sh  download_profiling_from_cluster_template.sh  install-precommit.sh  nvtx_profile.sh  profile_ablation_study.sh  profiling-template.sh  profiling.sh  run_banchmark_batch.py  thougput_data_with_ncu_script
scripts/res_ncu_full_test/: full_test_1024.csv  full_test_10_1024.csv  full_test_10_128.csv  full_test_10_16.csv  full_test_10_16384.csv  full_test_10_2.csv  full_test_10_2048.csv  full_test_10_256.csv  full_test_10_32.csv  full_test_10_32768.csv  full_test_10_4.csv  full_test_10_4096.csv  full_test_10_512.csv  full_test_10_64.csv  full_test_10_65536.csv  full_test_10_8.csv  full_test_10_8192.csv  full_test_11_1024.csv  full_test_11_128.csv  full_test_11_16.csv  full_test_11_16384.csv  full_test_11_2.csv  full_test_11_2048.csv  full_test_11_256.csv  full_test_11_32.csv  full_test_11_32768.csv  full_test_11_4.csv  full_test_11_4096.csv  full_test_11_512.csv  full_test_11_64.csv  full_test_11_65536.csv  full_test_11_8.csv  full_test_11_8192.csv  full_test_128.csv  full_test_12_1024.csv  full_test_12_128.csv  full_test_12_16.csv  full_test_12_16384.csv  full_test_12_2.csv  full_test_12_2048.csv  (+775 more)
src/: benchmark.cpp  binomial_crr_american_vanilla_option.cpp  functions_version.cpp
src/backends/cpu/: CMakeLists.txt  binomial_crr_american_vanilla_option_cpu.cpp  binomial_crr_european_vanilla_option_cpu.cpp  vanilla_american_binomial_cpu.cpp  vanilla_european_binomial_cpu.cpp
src/backends/cuda/: CMakeLists.txt  check_occupancy.cu  vanilla_american_binomial_cuda.cu  vanilla_american_binomial_cuda_fill.cu  vanilla_american_binomial_cuda_tile.cu  vanilla_american_binomial_cuda_unroll.cu
src/backends/cuda/vanilla_american_binomial_cuda/: bkdstprcmp.cu  bkdstprcmp_xdovlpunroll_shuffle_trimotm.cu  bkdstprcmp_xdovlpunroll_shuffle_trimotm_ds.cu  bkdstprcmp_xdovlpunroll_shuffle_trimotm_float.cu  bkdstprcmp_xdovlpunroll_shuffle_trimotm_malloc.cu  bkdstprcmp_xdovlpunroll_shuffle_trimotm_single.cu  bkdstprcmp_xdovlpunroll_vtile.cu  bkdstprcmp_xdovlpunroll_vtile_trimotm.cu  bkdstprcmp_xovlpunroll_shuffle_trimotm.cu  bkdstprcmp_xovlpunroll_shuffle_trimotm_malloc.cu  bkdstprcmp_xovlpunroll_vtile.cu  bkdstprcmp_xovlpunroll_vtile_trimotm.cu  bkdstprcmp_xovlpunroll_vtile_trimotm_trimeeoff.cu  naive.cu  nvidia_baseline.cu  scheduler_bkdstprcmp_shuffle_trimotm_ds.cu  scheduler_bkdstprcmp_xdovlpunroll_shuffle_ds.cu  scheduler_bkdstprcmp_xdovlpunroll_shuffle_trimotm.cu  scheduler_bkdstprcmp_xdovlpunroll_vtile_trimotm_ds.cu  scheduler_stprcmp_xdovlpunroll_shuffle_trimotm_ds.cu  scheduler_xdovlpunroll_shuffle_trimotm_ds.cu  stprcmp.cu  stprcmp_xunroll_stvtile.cu  stprcmp_xunroll_vprftc.cu  stprcmp_xyunroll_stvprftc.cu  stprcmp_xyunroll_stvtile_vprftc.cu  stprcmp_xyunroll_stvtile_vprftc_trimotm.cu  stprcmp_xyunroll_vprftc.cu  stprcmp_yunroll_vtile.cu  vanilla_american_binomial_cuda.cu  vanilla_american_binomial_cuda_fill.cu  vanilla_american_binomial_cuda_fill_banked.cu  vanilla_american_binomial_cuda_ignore_red_zero.cu  vanilla_american_binomial_cuda_mem.cu  vanilla_american_binomial_cuda_naive.cu  vanilla_american_binomial_cuda_overlap_unroll.cu  vanilla_american_binomial_cuda_overlap_unroll_trim.cu  vanilla_american_binomial_cuda_precomputed.cu  vanilla_american_binomial_cuda_precomputed_payoffs.cu  vanilla_american_binomial_cuda_precomputed_stock_price.cu  (+7 more)
src/backends/openmp/: CMakeLists.txt  binomial_crr_american_vanilla_option_openmp.cpp  vanilla_american_binomial_openmp.cpp
src/cpu/: CMakeLists.txt  binomial_crr_american_vanilla_option_cpu.cpp  binomial_crr_european_vanilla_option_cpu.cpp  openmp.cpp  remove_zero.cpp
src/models/: CMakeLists.txt  vanilla_american_binomial.cpp  vanilla_american_binomila.cpp  vanilla_european_binomial.cpp  vanilla_european_binomila.cpp
tests/: CMakeLists.txt  sanity_checks.cpp  test_binomial_crr_american_vanilla_option_cpu.cpp  test_binomial_crr_european_vanilla_option_cpu.cpp  test_vanilla_american_binomial.cpp  test_vanilla_european_binomial.cpp
tests/include/: catch.hpp  sanity_checks.hpp
visualizations/: ablation_study.py  main.py  multiple-128-runs.json  p.py  plot.py  plot_final.py  plot_speedup.py  plot_speedup_luigi.py  plot_thread_per_block.py  plot_throuput.py  pyproject.toml  quantlib.py  result_visualization.py  run_banchmark_batch.py  surface_plot.py  througput_plot.py
visualizations/data/: ablation_study_times.json  baseline-times.json  batch_gnodes_per_second.json  batch_gnodes_per_second_2.json  more_data_benchmark_lower_upper_bound.json  prova.json  random-benchmark-baselines-with-quantlib-and-nvidia.json  surface.json  temp.json  thougput.json  vanilla_american_binomial_cpu_quantlib copy.json  (+7 more)
(+11 files in other folders)
